# dtxmaniars

./: .gitignore  AGENTS.md  Cargo.toml  PRODUCT.md  README.md  scores.json
app/dtxmaniars-desktop/: Cargo.toml
app/dtxmaniars-desktop/src/: main.rs
crates/dev-tools/: Cargo.toml
crates/dev-tools/src/: lib.rs
crates/dtx-assets/: AGENTS.md  Cargo.toml
crates/dtx-assets/src/: lib.rs
crates/dtx-audio/: AGENTS.md  Cargo.toml
crates/dtx-audio/src/: crossfade.rs  lib.rs  preview.rs
crates/dtx-audio/tests/: mp3_decode.rs
crates/dtx-bga/: AGENTS.md  Cargo.toml
crates/dtx-bga/src/: chart.rs  lib.rs  video.rs
crates/dtx-bga/tests/: integration_bga.rs
crates/dtx-bga/tests/fixtures/: tiny.avi  visual.dtx
crates/dtx-config/: Cargo.toml
crates/dtx-config/src/: bindings.rs  drums.rs  key_assign.rs  lib.rs  practice.rs  profiles.rs
crates/dtx-core/: AGENTS.md  Cargo.toml
crates/dtx-core/src/: assets.rs  base36.rs  beat_lines.rs  bga.rs  c_avi.rs  c_box_set_def.rs  c_chart_data.rs  c_chip.rs  c_song_list_node.rs  cdtx_config.rs  cdtx_model.rs  cdtx_nested.rs  channel.rs  chart.rs  chip_classify.rs  chip_transform.rs  conditional.rs  constants.rs  cscore_ini.rs  diagnostic.rs  enum_converter.rs  error.rs  fdk_sub_acts.rs  format.rs  legacy_gda.rs  lib.rs  parser.rs  random_mode.rs  score_song.rs  timing.rs  trigger_pipeline.rs
crates/dtx-core/tests/: bga_tests.rs  compatibility_matrix.rs  comprehensive.rs  integration_mechanics.rs  parser_edge_cases.rs  parser_tests.rs  real_chart_test.rs
crates/dtx-core/tests/fixtures/: bga_basic.dtx  conditional_branches.dtx  conditional_nested.dtx  drums_basic.dtx  minimal.dtx  mp3_audio.dtx  real_chart.dtx  with_bgm.dtx
crates/dtx-input/: AGENTS.md  Cargo.toml
crates/dtx-input/src/: bindings.rs  events.rs  keyboard.rs  lane_map.rs  lib.rs  mapping.rs  midi.rs  pad.rs  profiles.rs  pump.rs  resolver.rs
crates/dtx-layout/: Cargo.toml
crates/dtx-layout/src/: file.rs  lane_edit.rs  lanes.rs  lib.rs  presets.rs  profiles.rs  scene.rs  widgets.rs
crates/dtx-library/: AGENTS.md  Cargo.toml
crates/dtx-library/src/: import.rs  lib.rs  preferences.rs  song_db_sub_acts.rs
crates/dtx-library/tests/: bgm_preview.rs  import.rs
crates/dtx-persistence/: Cargo.toml
crates/dtx-persistence/src/: lib.rs
crates/dtx-scoring/: Cargo.toml
crates/dtx-scoring/src/: gauge.rs  hit_ranges.rs  identity.rs  lib.rs  nx_import.rs  replay.rs  score_ini.rs  skill.rs  store.rs  xg_score.rs
crates/dtx-scoring/tests/: comprehensive.rs  edge_cases.rs  end_to_end_score.rs  history.rs  identity.rs  nx_import.rs  store_v2.rs
crates/dtx-timing/: AGENTS.md  Cargo.toml
crates/dtx-timing/src/: lib.rs
crates/dtx-timing/tests/: bpm_segment.rs  compatibility_timing.rs  comprehensive.rs
crates/dtx-ui/: Cargo.toml
crates/dtx-ui/src/: accessibility.rs  core_sub_acts.rs  easing.rs  lib.rs  motion.rs  parallax.rs  perf_common.rs  reference_layout.rs  skin.rs  theme.rs  transition.rs  tween.rs  typography.rs
crates/dtx-ui/src/widget/: action_button.rs  album_art.rs  combo_display.rs  controls.rs  density_graph.rs  density_strip.rs  difficulty_grid.rs  frame_chrome.rs  gauge_bar.rs  hud_ref.rs  judgment_popup.rs  lane_flush.rs  live_graph.rs  mod.rs  modal_dialog.rs  nav_legend.rs  notification.rs  now_playing.rs  options_panel.rs  pad_chips.rs  perf_combo.rs  phrase_meter.rs  play_history.rs  playfield_speed.rs  rolling_counter.rs  score_detailed.rs  song_progress.rs  song_wheel.rs  stage_background.rs  stage_panel.rs
crates/game-menu/: Cargo.toml
crates/game-menu/src/: change_skin.rs  change_skin_full.rs  chart_stats.rs  config.rs  config_full.rs  config_key_assign.rs  config_list.rs  config_list_audio.rs  config_list_audio_driver.rs  config_list_bass.rs  config_list_drums.rs  config_list_drums_velocity.rs  config_list_gameplay.rs  config_list_graphics.rs  config_list_guitar.rs  config_list_menu.rs  config_list_skin.rs  config_list_system.rs  density_graph.rs  discovery.rs  end.rs  home.rs  import_ui.rs  lib.rs  result.rs  song_loading.rs  song_ready.rs  song_search.rs  song_select.rs  song_select_full.rs  song_select_new_stage.rs  song_selection.rs  sort_menu.rs  startup.rs  status_panel.rs  title.rs
crates/game-results/: AGENTS.md  Cargo.toml
crates/game-results/src/: input.rs  lib.rs  result_full.rs  result_stage.rs  result_sub_acts.rs  ui.rs
crates/game-shell/: AGENTS.md  Cargo.toml
crates/game-shell/src/: fade.rs  lib.rs  nav.rs  navigation.rs  performance.rs  score_store.rs  states.rs  transition.rs
crates/game-shell/src/navigation/: context.rs  mod.rs  router.rs  source.rs
crates/game-shell/tests/: all_stages_reachable.rs
crates/gameplay-drums/: AGENTS.md  Cargo.toml
crates/gameplay-drums/src/: autoplay.rs  beat_lines.rs  bgm_scheduler.rs  bindings.rs  components.rs  damage_level.rs  derived.rs  drawable_sub_acts.rs  drum_groups.rs  drums_perf.rs  drums_screen_sub_acts.rs  events.rs  gauge.rs  hit_feedback.rs  hit_sound.rs  hud.rs  hud_cache.rs  input.rs  interp.rs  judge.rs  keyboard_viz.rs  lane_geometry.rs  lane_map.rs  lanes.rs  layout.rs  lib.rs  menu_nav.rs  miss.rs  mixer_events.rs  orchestrator.rs  pause.rs  perf_common.rs  perf_common_acts.rs  perf_hotkeys.rs  perf_sub_acts.rs  perf_sub_acts_3.rs  phrase.rs  playback_rate.rs  playfield_viz.rs  resources.rs  (+13 more)
crates/gameplay-drums/tests/: bindings_lane_pipeline.rs  editor.rs  editor_canvas.rs  editor_lanes.rs  editor_panel.rs  editor_session.rs  end_to_end_stage.rs  fixed_update_schedule_ordering.rs  input_lane_profiles.rs  lane_arrangement.rs  mixer_events.rs  play_chart.rs  practice_hud.rs  practice_mode.rs  system_events.rs  widget_layout.rs
crates/gameplay-guitar/: AGENTS.md  Cargo.toml
crates/gameplay-guitar/src/: components.rs  events.rs  guitar_perf.rs  guitar_screen_sub_acts.rs  hud.rs  input.rs  judge.rs  lane_map.rs  lib.rs  orchestrator.rs  resources.rs  score.rs  scroll.rs
crates/gameplay-guitar/tests/: guitar_play.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
tools/dtx-cli/: Cargo.toml
tools/dtx-cli/src/: main.rs
(+259 files in other folders)
