[package]
name = "dtxmaniars-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "DTXManiaRS desktop binary entrypoint."

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "dtxmaniars"
path = "src/main.rs"

[features]
default = ["brp"]
brp = ["dep:bevy_brp_extras"]

[dependencies]
bevy = { workspace = true, features = ["default", "bevy_remote", "system_font_discovery"] }
icu_provider = { version = "2.2", default-features = false, features = ["logging"] }
bevy_brp_extras = { version = "0.20.1", optional = true }
dtx-assets = { workspace = true }
dtx-audio = { workspace = true }
dtx-config = { workspace = true }
dtx-input = { workspace = true }
dtx-library = { workspace = true }
dtx-scoring = { workspace = true }
dtx-timing = { workspace = true }
dtx-ui = { workspace = true }
game-shell = { workspace = true }
game-menu = { workspace = true }
game-results = { workspace = true }
gameplay-drums = { workspace = true }
gameplay-guitar = { workspace = true }
