[package]
name = "dtxmaniars-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "DTXManiaRS desktop binary entrypoint."

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "dtxmaniars"
path = "src/main.rs"

[features]
default = ["midi"]
brp = ["dep:bevy_brp_extras"]
# Real hardware MIDI input via midir. On by default for the shipping binary;
# forwarded through gameplay-drums to dtx-input's `midi` feature.
midi = ["gameplay-drums/midi"]

[dependencies]
bevy = { workspace = true, features = ["default_app", "bevy_winit", "x11", "wayland", "multi_threaded", "default_font", "2d_bevy_render", "ui_bevy_render", "jpeg"] }
bevy_framepace = { workspace = true }
icu_provider = { version = "2.2", default-features = false, features = ["logging"] }
bevy_brp_extras = { version = "0.20.1", optional = true }
dtx-assets = { workspace = true }
dtx-audio = { workspace = true }
dtx-config = { workspace = true }
dtx-input = { workspace = true }
dtx-library = { workspace = true }
dtx-scoring = { workspace = true }
dtx-timing = { workspace = true }
dtx-ui = { workspace = true }
game-shell = { workspace = true }
game-menu = { workspace = true }
game-results = { workspace = true }
gameplay-drums = { workspace = true }
