[package]
name = "dev-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Egui inspector, FPS, log viewer. Dev-only. Bevy 0.19."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
bevy = { workspace = true }