[package]
name = "dtx-assets"
version = "0.1.0"
edition = "2024"
description = "DTX chart asset loading (Engine layer)"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, features = ["default"] }
dtx-core = { path = "../dtx-core" }
thiserror = { workspace = true }