[package]
name = "dtx-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Audio playback wrapper around bevy_kira_audio. Engine layer."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
bevy = { workspace = true }
bevy_kira_audio = { workspace = true }
dtx-core = { workspace = true }