[package]
name = "dtx-bga"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "BGA / video playback (Engine layer). M7 minimal."

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, default-features = false, features = ["bevy_asset", "bevy_render", "bevy_image", "bevy_ui"] }
dtx-core = { workspace = true }
dtx-config = { workspace = true }
dtx-timing = { workspace = true }
thiserror = { workspace = true }
video-rs = { workspace = true }