[package]
name = "dtx-layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "User layout persistence (lanes + HUD widget placement). Pure data, no bevy."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = { workspace = true }
dtx-core = { path = "../dtx-core" }
