[package]
name = "dtx-scoring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Pure scoring rules: timing windows, judgment types, score persistence."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
dtx-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = { workspace = true }