[package]
name = "dtx-timing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Authoritative audio clock for hit-window judgment. Engine layer."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
bevy = { workspace = true }
bevy_kira_audio = { workspace = true }
dtx-audio = { path = "../dtx-audio" }