[package]
name = "dtx-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Reusable UI widgets, screen fade constants, animation helpers. Bevy 0.19."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
bevy = { workspace = true }