[package]
name = "dtx-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Reusable UI widgets, screen fade constants, animation helpers. Bevy 0.19."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
bevy = { workspace = true, default-features = false, features = ["bevy_asset", "bevy_text", "bevy_ui", "bevy_image"] }
chrono = { workspace = true }
# M5+: animation crate. Pinned to git rev in workspace (bevy 0.19 not on crates.io).
# Add `TweeningPlugin` in lib.rs when first tween is wired.
bevy_tweening = { workspace = true }
# ADR-0015: PreviewSwapEvent consumed by widget/album_art. dtx-ui is
# Game, dtx-audio is Engine — Game→Engine is allowed.
dtx-audio = { workspace = true }
dtx-config = { workspace = true }
