[package]
name = "game-menu"
version = "0.1.0"
edition = "2024"
description = "Menu stages (Title, SongSelect, Config, Result) — DTXManiaNX ports"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, features = ["default_app", "2d_bevy_render", "ui_bevy_render"] }
bevy_kira_audio = { workspace = true }
dtx-core = { path = "../dtx-core" }
dtx-config = { path = "../dtx-config" }
dtx-scoring = { path = "../dtx-scoring" }
dtx-assets = { path = "../dtx-assets" }
dtx-audio = { path = "../dtx-audio" }
dtx-bga = { path = "../dtx-bga" }
dtx-library = { path = "../dtx-library" }
dtx-ui = { workspace = true }
gameplay-drums = { path = "../gameplay-drums" }
game-shell = { path = "../game-shell" }
rfd = "0.17"
[dev-dependencies]
dtx-input = { workspace = true }
