[package]
name = "gameplay-drums"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Drums gameplay vertical slice: chart → scroll → judge → score. Game layer."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
bevy = { workspace = true, default-features = true }
bevy_kira_audio = { workspace = true }
dtx-core = { workspace = true }
dtx-config = { workspace = true }
dtx-input = { workspace = true }
dtx-layout = { path = "../dtx-layout" }
dtx-scoring = { workspace = true }
dtx-timing = { workspace = true }
dtx-audio = { workspace = true }
dtx-ui = { workspace = true }
game-shell = { path = "../game-shell" }

[dev-dependencies]
dtx-core = { workspace = true }