[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "matklad-style automation: build, asset import, release pack."

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "xtask"
path = "src/main.rs"