[package]
name = "dtx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "DTX utility CLI: validate, inspect, future conversions."

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "dtx"
path = "src/main.rs"

[dependencies]
dtx-core = { workspace = true }
dtx-scoring = { workspace = true }
dtx-timing = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"